--- a/mobile/contact.html
+++ b/mobile/contact.html
@@ -17,23 +17,25 @@
       <a href="/mobile/index.html"><img src="/mobile/MKSVS LOGO/MKSVS.png" class="logo" alt="Masterlock Key & Safe-Vault Logo"></a>
       <!-- Add mobile menu icon -->
       <button class="menu-icon" aria-label="Mobile Menu">&#9776;</button>
-    </div>
-    <ul id="menu" class="hidden">
-      <li><a href="/mobile/about.html">ABOUT</a></li>
-      <!-- Dropdown Navbar for Services -->
-      <li class="dropdown">
-        <a href="#">SERVICES ▾</a>
-        <ul class="dropdown-content">
-          <li><a href="/mobile/Services/Key Duplication Services/KeyDupeSvs.html">Key Duplication Services</a></li>
-          <li><a href="/mobile/Services/Locksmith Services/locksmithsvs.html">Locksmith Services</a></li>
-          <li><a href="/mobile/Services/Commercial Locksmith Services/CommerLocksmithSvs.html">Commercial Lock Smith Services</a></li>
-          <li><a href="/mobile/Services/Automotive Services/AutoMotiveSvs.html">Automotive Services</a></li>
-          <li><a href="/mobile/Services/Glassdoor Services/glassdoor.html">Glassdoor Services</a></li>
-          <li><a href="/mobile/Services/Vault Services/vaultsvs.html">Vault Services</a></li>
+      <!-- Add the mobile navigation menu items -->
+      <nav class="mobile-menu">
+        <ul>
+          <li><a href="/mobile/about.html">ABOUT</a></li>
+          <li class="dropdown">
+            <a href="#">SERVICES ▾</a>
+            <ul class="dropdown-content">
+              <li><a href="/mobile/Services/Key Duplication Services/KeyDupeSvs.html">Key Duplication Services</a></li>
+              <li><a href="/mobile/Services/Locksmith Services/locksmithsvs.html">Locksmith Services</a></li>
+              <li><a href="/mobile/Services/Commercial Locksmith Services/CommerLocksmithSvs.html">Commercial Lock Smith Services</a></li>
+              <li><a href="/mobile/Services/Automotive Services/AutoMotiveSvs.html">Automotive Services</a></li>
+              <li><a href="/mobile/Services/Glassdoor Services/glassdoor.html">Glassdoor Services</a></li>
+              <li><a href="/mobile/Services/Vault Services/vaultsvs.html">Vault Services</a></li>
+            </ul>
+          </li>
+          <li><a href="/mobile/contact.html">CONTACT</a></li>
         </ul>
-      </li>
-      <li><a href="/mobile/contact.html">CONTACT</a></li>
-    </ul>
+      </nav>
+    </div>
 
  <!-- Main Content -->
 
