--- a/desktop/index.html
+++ b/desktop/index.html
@@ -33,7 +33,8 @@
     </div>
 
       <div class="content">
-      <h1>Masterlock Key & Safe-Vault Specialist</span></h1>
+      <p class="formerly-temp">(Formerly Masterlock-key & Safe-Vault Specialists)</p>
+      <h1>MKSVS Enterprise Corporation</span></h1>
       <p>Your 24/7 Friendly Neighbourhood Locksmith Since 1994.</p>
           <div>
             <a href="/desktop/about.html"><button type="button"><span></span>ABOUT</button></a>
