--- a/desktop/contact.html
+++ b/desktop/contact.html
@@ -6,10 +6,15 @@
   <title>Masterlock Key & Safe-Vault Specialists</title>
   <link rel="stylesheet" href="/desktop/styles.css">
   <link rel="icon" href="/desktop/Images/mksvslogo.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  
 </head>
 <section>
 <body>
-  <!-- Banner / Background IMG -->
+  <!---------------------Javascript SDK---------------------------->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="4fUZWGQ2"></script>
+    <!-----Banner----->
   <div class="banner">
     <!-- Navigation Bar -->
     <div class="navbar">
@@ -31,10 +36,46 @@
         <li><a href="/desktop/contact.html">CONTACT</a></li>
       </ul>
     </div>
-
-
-    
-  </div>
+    <!--------------Main Content------------------------------>
+    <section class="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <div class="contact-info">
+        <div class="contact-item">
+          <i class="fas fa-phone-alt"></i>
+          <p>(8) 893-5297</p>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-phone-alt"></i>
+          <p>(8) 810-8582</p>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-phone-alt"></i>
+          <p>(8) 892-8679</p>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-mobile-alt"></i>
+          <p>0922-893-5297</p>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-mobile-alt"></i>
+          <p>0917-712-5297</p>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-mobile-alt"></i>
+          <p>0917-318-1620</p>
+        </div>
+      </div>
+      <div class="location">
+        <i class="fas fa-map-marker-alt"></i>
+        <p>6921 Washington St., Brgy. Pio del Pilar, Makati City</p>
+      </div>
+      <div class="facebook-page">
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmasterlockph&tabs=timeline&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="130" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+      </div>
+      
+    </div>
+    </section>
 
 </section>
   <script src="/desktop/script.js"></script>
