--- a/mobile/contact.html
+++ b/mobile/contact.html
@@ -9,38 +9,78 @@
   <link rel="icon" href="/mobile/Images/mksvslogo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <link rel="stylesheet" href="/mobile/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  
 </head>
-<body>
-  <!-- Banner / Background IMG -->
-  <div class="banner">
-    <div class="navbar">
-      <a href="/mobile/index.html"><img src="/mobile/MKSVS LOGO/MKSVS.png" class="logo" alt="Masterlock Key & Safe-Vault Logo"></a>
-      <!-- Add mobile menu icon -->
-      <button class="menu-icon" aria-label="Mobile Menu">&#9776;</button>
-      <!-- Add the mobile navigation menu items -->
-      <nav class="mobile-menu">
+<section>
+  <body>
+    <!---------------------Javascript SDK---------------------------->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="4fUZWGQ2"></script>
+      <!-----Banner----->
+    <div class="banner">
+      <!-- Navigation Bar -->
+      <div class="navbar">
+        <a href="/desktop/index.html"><img src="/desktop/MKSVS LOGO/MKSVS.png" class="logo" alt="Masterlock Key & Safe-Vault Logo"></a>
         <ul>
-          <li><a href="/mobile/about.html">ABOUT</a></li>
+          <li><a href="/desktop/about.html">ABOUT</a></li>
+          <!-- Dropdown Navbar for Services-->
           <li class="dropdown">
             <a href="#">SERVICES ▾</a>
             <ul class="dropdown-content">
-              <li><a href="/mobile/Services/Key Duplication Services/KeyDupeSvs.html">Key Duplication Services</a></li>
-              <li><a href="/mobile/Services/Locksmith Services/locksmithsvs.html">Locksmith Services</a></li>
-              <li><a href="/mobile/Services/Commercial Locksmith Services/CommerLocksmithSvs.html">Commercial Lock Smith Services</a></li>
-              <li><a href="/mobile/Services/Automotive Services/AutoMotiveSvs.html">Automotive Services</a></li>
-              <li><a href="/mobile/Services/Glassdoor Services/glassdoor.html">Glassdoor Services</a></li>
-              <li><a href="/mobile/Services/Vault Services/vaultsvs.html">Vault Services</a></li>
+              <li><a href="/desktop/Services/Key Duplication Services/KeyDupeSvs.html">Key Duplication Services</a></li>
+              <li><a href="/desktop/Services/Locksmith Services/locksmithsvs.html">Locksmith Services</a></li>
+              <li><a href="/desktop/Services/Commercial Locksmith Services/CommerLocksmithSvs.html">Commercial Lock Smith Services</a></li>
+              <li><a href="/desktop/Services/Automotive Services/AutoMotiveSvs.html">Automotive Services</a></li>
+              <li><a href="/desktop/Services/Glassdoor Services/glassdoor.html">Glassdoor Services</a></li>
+              <li><a href="/desktop/Services/Vault Services/vaultsvs.html">Vault Services</a></li>
             </ul>
           </li>
-          <li><a href="/mobile/contact.html">CONTACT</a></li>
+          <li><a href="/desktop/contact.html">CONTACT</a></li>
         </ul>
-      </nav>
-    </div>
-
- <!-- Main Content -->
-
-
-  </div>
+      </div>
+      <!--------------Main Content------------------------------>
+      <section class="contact">
+      <div class="container">
+        <h2>Contact Us</h2>
+        <div class="contact-info">
+          <div class="contact-item">
+            <i class="fas fa-phone-alt"></i>
+            <p>(8) 893-5297</p>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-phone-alt"></i>
+            <p>(8) 810-8582</p>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-phone-alt"></i>
+            <p>(8) 892-8679</p>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-mobile-alt"></i>
+            <p>0922-893-5297</p>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-mobile-alt"></i>
+            <p>0917-712-5297</p>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-mobile-alt"></i>
+            <p>0917-318-1620</p>
+          </div>
+        </div>
+        <div class="location">
+          <i class="fas fa-map-marker-alt"></i>
+          <p>6921 Washington St., Brgy. Pio del Pilar, Makati City</p>
+        </div>
+        <div class="facebook-page">
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmasterlockph&tabs=timeline&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="130" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        </div>
+        
+      </div>
+      </section>
+  
+  </section>
   
 
   <script src="/mobile/script.js"></script>
