--- a/desktop/index.html
+++ b/desktop/index.html
@@ -33,7 +33,7 @@
     </div>
 
       <div class="content">
-      <p class="formerly-temp">(Formerly Masterlock-key & Safe-Vault Specialists)</p>
+      <p class="formerly-temp">(Formerly Masterlock-key & Safe-Vault Specialist)</p>
       <h1>MKSVS Enterprise Corporation</span></h1>
       <p>Your 24/7 Friendly Neighbourhood Locksmith Since 1994.</p>
           <div>
