--- a/mobile/services.html
+++ b/mobile/services.html
@@ -20,6 +20,7 @@
       <!-- Add the mobile navigation menu items -->
       <nav class="mobile-menu">
         <ul>
+          <li><a href="/desktop/home.html">HOME</a></li>
           <li><a href="/mobile/about.html">ABOUT</a></li>
           <li class="dropdown">
             <a href="#">SERVICES ▾</a>
