--- a/mobile/index.html
+++ b/mobile/index.html
@@ -41,7 +41,7 @@
 
   <!-- Main Content -->
   <div class="content">
-    <p class="formerly-temp">(Formerly Masterlock-key & Safe-Vault Specialist)</p>
+    <p class="formerly-temp">(Masterlock-key & Safe-Vault Specialist)</p>
     <h1>MKSVS Enterprise Corporation</h1>
     <p>Your 24/7 Friendly Neighbourhood Locksmith Since 1994.</p>
     <div>
