--- a/mobile/contact.html
+++ b/mobile/contact.html
@@ -63,7 +63,7 @@
           </div>
           <div class="contact-item">
             <i class="fas fa-mobile-alt"></i>
-            <p>0922-893-5297</p>
+            <p>0922-824-7402</p>
           </div>
           <div class="contact-item">
             <i class="fas fa-mobile-alt"></i>
@@ -73,6 +73,9 @@
             <i class="fas fa-mobile-alt"></i>
             <p>0917-318-1620</p>
           </div>
+          <div class="contact-item">
+            <i class="fas fa-mobile-alt"></i>
+            <p>0922-893-5297</p>
         </div>
         <div class="location">
           <i class="fas fa-map-marker-alt"></i>
