--- a/mobile/contact.html
+++ b/mobile/contact.html
@@ -46,7 +46,7 @@
       </div>
       <!--------------Main Content------------------------------>
       <section class="contact">
-      <div class="container">
+      <div class="container-contact">
         <h2>Contact Us</h2>
         <div class="contact-info">
           <div class="contact-item">
