--- a/mobile/services.html
+++ b/mobile/services.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- Banner / Background IMG -->
-  <div class="banner">
+  <div class="banner-services">
     <div class="navbar">
       <button class="menu-icon" aria-label="Mobile Menu">&#9776;</button>
       <!-- Add the mobile navigation menu items -->
@@ -38,7 +38,44 @@
     </div>
 
  <!-- Main Content -->
+      <div class="container-services">
 
+        <div class="automotive">
+          <h1 class="h1-services">Automotive Services</h1>
+          <h2 class="h2-services">Locked Out? We're On Our Way</h2>
+          <p class="p-services">Car lockouts can be frustrating, but they don't have to ruin your day. Whether it's a door lock, car padlock, or any other vehicle lock, our automotive locksmith experts are ready to assist. With their specialized vehicles, they can reach you anywhere in Metro Manila and nearby provinces, ensuring you're back on the road in no time. And for those distressing moments of lost car keys, rest easy knowing our professionals will only duplicate or fabricate a key under the watchful eye of the confirmed car owner. Your car's security is our top priority.</p>
+        </div>
+
+        <div class="commercial">
+          <h1 class="h1-services">Commercial Locksmith Services</h1>
+          <h2 class="h2-services">Safeguarding Your Business, One Lock at a Time</h2>
+          <p class="p-services">In the world of business, security is paramount. From protecting valuable assets to ensuring the safety of your employees, our commercial locksmith services cater to all your needs. Be it high-security locks, access control systems, or master key setups, we've got you covered. Partner with us, and together, let's build a secure and prosperous future for your business.
+          </p>
+        </div>
+
+        <div class="glassdoor">
+          <h1 class="h1-services">Glassdoor Services</h1>
+          <h2 class="h2-services">Transparent Solutions for Your Glass Door Needs</h2>
+          <p class="p-services">Glass doors add a touch of elegance and modernity to any space. However, they come with their own set of challenges. Be it a faulty lock, alignment issues, or a sudden crack, our glass door services are designed to address all these and more. Let our experts bring clarity and functionality back to your glass doors, making them as beautiful and secure as they were on day one.</p>
+        </div>
+        <div class="keydup">
+          <h1 class="h1-services"></h1>
+          <h2 class="h2-services"></h2>
+          <p class="p-services"></p>
+        </div>
+        <div class="locksmithservices">
+          <h1 class="h1-services">Locksmith Services</h1>
+          <h2 class="h2-services">Your 24/7 Guardian Angel for All Lock Issues</h2>
+          <p class="p-services">Locked out of your home or office? Or maybe there's a troublesome lock that just won't budge? Fret not! Our team of professional locksmiths is just a call away. With years of experience under their belt, they're equipped to tackle any lock problem, ensuring you regain access swiftly and safely. Available around the clock, our locksmiths are committed to providing you with peace of mind, regardless of the time or place.</p>
+        </div>
+
+        <div class="vault">
+          <h1 class="h1-services">Vault Services</h1>
+          <h2 class="h2-services">Your Treasure's Guardian</h2>
+          <p class="p-services">Vaults are the epitome of security, but what happens when you're locked out or forget the combination? Our vault services are here to ensure that your valuables remain accessible to you and only you. Whether it's a combination change, maintenance, or an emergency opening, we approach each task with utmost care and precision. If you've forgotten your combination, we'll first attempt a non-invasive approach. And in rare cases where drilling is needed, our experts ensure your vault remains as robust and functional as ever. For banks and pawnshops, we also supply advanced TIME-DELAY LOCKS and other state-of-the-art security products to bolster your defenses.</p>
+        </div>
+
+      </div>
 
   </div>
   
